fix spacing in header

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -34,6 +34,11 @@ body {
   padding: 2em 0 4em;
 }
 
+.header .aside .widget.content {
+  margin: 0.6em 0 1.1em;
+  display: inline-block;
+}
+
 .header, .blogpost-page, .default-page, .menu-page, .home-page, .gallery-featured, .contact-page, .about-page {
 	background: @color-swatch1;
 	float: left;
@@ -65,7 +70,7 @@ body {
 }
 
 .widget.logo {
-	margin-top: 30px;
+	margin-top: 35px;
 	text-align:center;
 }
 
@@ -208,7 +213,7 @@ nav {
 	border-top: 1px solid darken(@color-swatch1,5%);
 	border-bottom: 1px solid darken(@color-swatch1,5%);
 	padding: 10px 0px 8px 0px;
-	margin: 25px 0px;
+	margin: 35px 0px;
   @media @tablet {
     padding: 10px 0px 0px;
   }
@@ -389,7 +394,7 @@ ul.twitter {
 
 .widget.companyname {
 	text-align: center;
-	padding: 20px 0px 15px 0px;
+	padding: 10px 0px 15px 0px;
 	text-decoration: none;
 		a {
 			color: @font-swatch10-color;
